@@ -22,6 +22,9 @@
 #include <grub/efi/api.h>
 #include <grub/efi/efi.h>
 #include <grub/datetime.h>
+#include <grub/dl.h>
+
+GRUB_MOD_LICENSE ("GPLv3+");
 
 grub_err_t
 grub_get_datetime (struct grub_datetime *datetime)
